--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,31 @@
 {% load static %}
-
-<!DOCTYPE html>
+<!doctype html>
+<html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <meta name="theme-color" content="#ffffff"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon_io/apple-touch-icon.png' %}"/>
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png"/>
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png"/>
-    <link rel="manifest" href="favicon_io/site.webmanifest"/>
+    <link rel="manifest" href="{% static 'favicon_io/site.webmanifest' %}"/>
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css"/>
-    <link rel="stylesheet" href="fonts/PTSerif/stylesheet.css"/>
-    <link rel="stylesheet" href="fonts/PTSans/stylesheet.css"/>
-    <link rel="stylesheet" href="css/style.css"/>
-    <title>index</title>
-    <!--title your page 'about-us' example-->
+    <link rel="stylesheet" href="{% static 'fonts/PTSerif/stylesheet.css' %}"/>
+    <link rel="stylesheet" href="{% static 'fonts/PTSans/stylesheet.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}"/>
+    <title>Product-inner</title>
   </head>
- </html>
-{% block content %}  {% endblock content %}
+
+
+{% block content %}
+{% endblock %}
+
+
+    <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/swiper@11.1.14/swiper.min.js"></script>
+    <script src="{% static 'js/libs.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+
+</html>
