--- a/templates/product-inner.html
+++ b/templates/product-inner.html
@@ -1,44 +1,30 @@
-<!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <meta name="theme-color" content="#ffffff"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png"/>
-    <link rel="manifest" href="favicon_io/site.webmanifest"/>
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css"/>
-    <link rel="stylesheet" href="fonts/PTSerif/stylesheet.css"/>
-    <link rel="stylesheet" href="fonts/PTSans/stylesheet.css"/>
-    <link rel="stylesheet" href="css/style.css"/>
-    <title>Product-inner</title>
-  </head>
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
   <body>
     <header class="header">
       <div class="container">
         <div class="header-content">
           <div class="header-logo">
-            <div class="header-logo__img"><a href="#"><img src="img/svg/logo-header.svg"/></a></div>
+            <div class="header-logo__img"><a href="#"><img src="{% static 'img/svg/logo-header.svg' %}"/></a></div>
           </div>
           <div class="header-nav__content">
             <div class="navigation">
               <ul class="nav">
                 <div class="nav-group">
-                  <li class="nav-link active"><a href="#">О нас</a></li>
-                  <li class="nav-link"><a href="#">Продукция</a></li>
-                  <li class="nav-link"><a href="#">Публикации</a></li>
+                 <li class="nav-link active"><a href="{% url 'index' %}">О нас</a></li>
+                  <li class="nav-link"><a href="{% url 'products' %}">Продукция</a></li>
+                  <li class="nav-link"><a href="{% url 'product' %}">Публикации</a></li>
                 </div>
                 <div class="nav-group">
-                  <li class="nav-link"><a href="#">Рецепты</a></li>
+                  <li class="nav-link"><a href="{% url 'recipes' %}">Рецепты</a></li>
 
                 </div>
               </ul>
             </div>
             <div class="header-language">
-              <div class="network-link"><a href="#"><img src="img/svg/instagram-icon.svg"/></a><a href="#"><img src="img/svg/facebook-icon.svg"/></a><a href="#"><img src="img/svg/whatsapp-icon.svg"/></a></div>
-              <div class="language-link"><a href="#"><img src="img/svg/kg-icon.svg"/></a><a href="#"><img src="img/svg/ru-icon.svg"/></a><a href="#"><img src="img/svg/en-icon.svg"/></a><a href="#"><img src="img/svg/kz-icon.svg"/></a></div>
+              <div class="network-link"><a href="#"><img src="{% static 'img/svg/instagram-icon.svg' %}"/></a><a href="#"><img src="{% static 'img/svg/facebook-icon.svg' %}"/></a><a href="#"><img src="{% static 'img/svg/whatsapp-icon.svg' %}"/></a></div>
+              <div class="language-link"><a href="#"><img src="{% static 'img/svg/kg-icon.svg' %}"/></a><a href="#"><img src="{% static 'img/svg/ru-icon.svg' %}"/></a><a href="#"><img src="{% static 'img/svg/en-icon.svg' %}"/></a><a href="#"><img src="{% static 'img/svg/kz-icon.svg' %}"/></a></div>
             </div>
           </div>
         </div>
@@ -56,9 +42,9 @@
         </div>
       </div>
     </section>
-    <section class="parallax" style="background: url('img/jpg/slider-background.jpg')">
-      <div class="paralax-img"><img src="img/png/img9.png"/></div>
-      <div class="paralax-img2"><img src="img/png/img10.png"/></div>
+    <section class="parallax" style="background: url({% static 'img/jpg/slider-background.jpg' %})">
+      <div class="paralax-img"><img src="{% static 'img/png/img9.png' %}"/></div>
+      <div class="paralax-img2"><img src="{% static 'img/png/img10.png' %}"/></div>
       <div class="parallax-heading">
         <h2>полукапченые колбасы</h2>
       </div>
@@ -67,8 +53,8 @@
       <div class="container">
         <div class="product-right">
           <div class="product__inner-content">
-            <div class="product__inner-img"><img src="img/png/img12.png"/></div>
-            <div class="productinner-heading-all">
+            <div class="product__inner-img"><img src="{% static 'img/png/img12.png' %}"/></div>
+            <div class="product__inner-heading-all">
               <div class="product__inner-heading">
                 <h2>  Фирменная</h2>
                 <h3> Колбаса полукапченая</h3>
@@ -83,7 +69,7 @@
                 <div class="product__inner-card-all">
                   <div class="product__inner-cards">
                     <div class="product__inner-card">
-                      <div class="product__inner-card-img"><img src="img/png/img.png" data-mh="my-group2"/></div>
+                      <div class="product__inner-card-img"><img src="{% static 'img/png/img.png' %}" data-mh="my-group2"/></div>
                       <div class="product__inner-card-heading">
                         <p>Миссия компании заключается в том, чтобы прикладывать все силы для</p>
                       </div><a href="#"></a>
@@ -91,7 +77,7 @@
                   </div>
                   <div class="product__inner-cards">
                     <div class="product__inner-card">
-                      <div class="product__inner-card-img"><img src="img/png/img.png" data-mh="my-group2"/></div>
+                      <div class="product__inner-card-img"><img src="{% static 'img/png/img.png' %}" data-mh="my-group2"/></div>
                       <div class="product__inner-card-heading">
                         <p>Миссия компании заключается в том, чтобы прикладывать</p>
                       </div><a href="#"></a>
@@ -99,7 +85,7 @@
                   </div>
                   <div class="product__inner-cards">
                     <div class="product__inner-card">
-                      <div class="product__inner-card-img"><img src="img/png/img.png" data-mh="my-group2"/></div>
+                      <div class="product__inner-card-img"><img src="{% static 'img/png/img.png' %}" data-mh="my-group2"/></div>
                       <div class="product__inner-card-heading">
                         <p>Миссия компании заключается в том.</p>
                       </div><a href="#"></a>
@@ -119,61 +105,61 @@
             <div class="product__card-all">
               <div class="product__card-inner">
                 <div class="product__card">
-                  <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                  <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                   <h4 data-mh="my-group"> Фирменная</h4><a href="#"></a>
                 </div>
               </div>
               <div class="product__card-inner">
                 <div class="product__card">
-                  <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                  <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                   <h4 data-mh="my-group"> Мусульманская Мусульманская</h4><a href="#"></a>
                 </div>
               </div>
               <div class="product__card-inner">
                 <div class="product__card">
-                  <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                  <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                   <h4 data-mh="my-group"> Байская Мусульманская Мусульманская</h4><a href="#"></a>
                 </div>
               </div>
               <div class="product__card-inner">
                 <div class="product__card">
-                  <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                  <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                   <h4 data-mh="my-group"> Байская Мусульманская Мусульманская Мусульманская</h4><a href="#"></a>
                 </div>
               </div>
               <div class="product__card-inner">
                 <div class="product__card">
-                  <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                  <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                   <h4 data-mh="my-group"> Байская</h4><a href="#"></a>
                 </div>
               </div>
               <div class="product__card-inner">
                 <div class="product__card">
-                  <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                  <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                   <h4 data-mh="my-group"> Фирменная</h4><a href="#"></a>
                 </div>
               </div>
               <div class="product__card-inner">
                 <div class="product__card">
-                  <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                  <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                   <h4 data-mh="my-group"> Мусульманская Мусульманская</h4><a href="#"></a>
                 </div>
               </div>
               <div class="product__card-inner">
                 <div class="product__card">
-                  <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                  <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                   <h4 data-mh="my-group"> Байская Мусульманская Мусульманская</h4><a href="#"></a>
                 </div>
               </div>
               <div class="product__card-inner">
                 <div class="product__card">
-                  <div class="product__card-img"><img src="img/png/img12.png"/></div>
+                  <div class="product__card-img"><img src="{% static 'img/png/img12.png' %}"/></div>
                   <h4 data-mh="my-group"> Байская Мусульманская Мусульманская Мусульманская</h4><a href="#"></a>
                 </div>
               </div>
               <div class="product__card-inner">
                 <div class="product__card">
-                  <div class="product__card-img"><img src="img/png/img9.png"/></div>
+                  <div class="product__card-img"><img src="{% static 'img/png/img9.png' %}"/></div>
                   <h4 data-mh="my-group"> Байская</h4><a href="#"></a>
                 </div>
               </div>
@@ -189,22 +175,18 @@
           <div class="footer-nav-content">
             <nav class="nav">
               <ul>
-                <li><a href="#">О нас</a></li>
-                <li><a href="#">Продукция</a></li>
-                <li><a href="#">Публикации</a></li>
-                <li><a href="#">Рецепты</a></li>
+                <li><a href="{% url' index' %}">О нас</a></li>
+                <li><a href="{% url 'products' %}">Продукция</a></li>
+                <li><a href="{% url 'product' %}">Публикации</a></li>
+                <li><a href="{% url 'recipes' %}">Рецепты</a></li>
               </ul>
             </nav>
             <div class="footer-link">
-              <div class="network-link"><a href="#"><img src="img/svg/instagram-icon.svg"/></a><a href="#"><img src="img/svg/facebook-icon.svg"/></a><a href="#"><img src="img/svg/whatsapp-icon.svg"/></a></div>
+              <div class="network-link"><a href="#"><img src="{% static 'img/svg/instagram-icon.svg' %}"/></a><a href="#"><img src="{% static 'img/svg/facebook-icon.svg' %}"/></a><a href="#"><img src="{% static 'img/svg/whatsapp-icon.svg' %}"/></a></div>
             </div>
           </div>
         </div>
       </div>
     </footer>
-    <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/swiper@11.1.14/swiper.min.js"></script>
-    <script src="js/libs.js"></script>
-    <script src="js/main.js"></script>
   </body>
-</html>
+{% endblock %}
